@@ -24,7 +24,7 @@
  */
 ?>
 
-<?php if (null != ($bannerBox = ZMBanners::instance()->getBannerForGroupName('box1'))) { ?>
+<?php if (null != ($bannerBox = ZMBanners::instance()->getBannerForSet('box1'))) { ?>
     <h3><?php zm_l10n("Sponsors") ?></h3>
     <div id="sb_banner_box" class="box">
         <?php $macro->showBanner($bannerBox); ?>
